# testproject_cpp

./: CMakeLists.gtest-download.txt  CMakeLists.txt  nokia.testproject.code-workspace
bits/: CMakeLists.txt  get_min_and_max_with_same_amount_of_bits_set.cpp  get_min_and_max_with_same_amount_of_bits_set.hpp
bits/tests/: CMakeLists.txt  get_min_and_max_with_same_amount_of_bits_set__tests.cpp
bits/tests/get_min_and_max_with_same_amount_of_bits_set/: tests__all_bits_set.cpp  tests__no_bits_set.cpp  tests__one_bit_set.cpp  tests__three_bits_set.cpp  tests__two_bits_set.cpp
common/: CMakeLists.txt  list.hpp  vector.hpp
common/tests/: CMakeLists.txt  asserts_collection_eq.hpp  list__to_vector__tests.cpp  vector__to_vector__tests.cpp
common/tests/list__of__int/to_vector/: tests__same_items.cpp
common/tests/vector__of__int/to_vector/: tests__same.cpp
lists/: CMakeLists.txt  single_linked_list.hpp  single_linked_list_node.cpp  single_linked_list_node.hpp
lists/tests/: CMakeLists.txt
lists/tests/single_linked_list__of__int/remove_every_fifth/: tests__should.hpp  tests__should_remove_5.cpp  tests__should_remove_5_10_and_15.cpp  tests__should_remove_5_and_10.cpp  tests__should_remove_every_fifth.hpp  tests__should_remove_nothing.cpp
lists/tests/single_linked_list__of__int/reverse/: tests__same_items.cpp
lists/tests/single_linked_list__of__int/to_list/: tests__same_items.cpp
primes/: CMakeLists.txt  get_first_n_primes.cpp  get_first_n_primes.hpp
primes/tests/: CMakeLists.txt  get_first_n_primes__tests.cpp
primes/tests/get_first_n_primes/: tests__caching.cpp  tests__first_n_primes.cpp
text/: CMakeLists.txt  map_words_length_to_count.cpp  map_words_length_to_count.hpp
text/tests/: CMakeLists.txt
text/tests/map_words_length_to_count/: tests__free_text.cpp  tests__no_words.cpp  tests__one_word.cpp  tests__special_case_word_with_dash.cpp  tests__special_case_word_with_digits.cpp  tests__special_word_ie.cpp  tests__two_words.cpp
trees/: CMakeLists.txt  tree.hpp  tree_node.hpp
trees/tests/: CMakeLists.txt  convert_nodes_to_payload.hpp
trees/tests/tree__of__string/: typedef.hpp
trees/tests/tree__of__string/find_all_longest_pathes_from_root_to_leaves/: tests__should.cpp
trees/tests/tree__of__string/find_all_longest_pathes_from_root_to_leaves_recursively/: tests__should.cpp
